--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,85 @@
   margin-top: 10px;
 }
 
+h1 {
+  font-family:'Brush Script MT';
+  font-size: 60px;
+}
+
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  content: " ";
+  clear: both;
+  height: 0;
+  font-size: 0;
+}
+
 .box {
-  border: 1px solid black;
+  border: 4px solid black;
   height: 150px;
 }
+
+button {
+	border: 2px solid black;
+	margin-top: 20px;
+}
+
+.X {
+ color: #f2183d;
+  font-size: 100px;
+  font-family: 'Brush Script MT';
+}
+
+.O {
+  color: #4ecdc4;
+  font-size: 100px;
+  font-family:'Brush Script MT';
+
+}
+
+.btn-danger {
+  background-color: #f2183d;
+  border: 2px solid black;
+}
+
+.btn-danger:hover {
+  background-color: #4ecdc4;
+  border: 2px solid black;
+}
+
+.img {
+    top: 50%;
+    left: 50%;
+    right: 60%;
+    width: 140px;
+    height: 140px;
+    
+    -webkit-animation:spin 4s linear infinite;
+    -moz-animation:spin 4s linear infinite;
+    animation:spin 4s linear infinite;
+    float:left;
+    margin-left:50px;
+    margin-bottom:50px;
+}
+
+.image {
+    top: 50%;
+    left: 50%;
+    right: 60%;
+    width: 140px;
+    height: 140px;
+    
+    -webkit-animation:spin 4s linear infinite;
+    -moz-animation:spin 4s linear infinite;
+    animation:spin 4s linear infinite;
+    float:right;
+    margin-right:50px;
+    margin-bottom:50px;
+}
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
+
+
